--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,15 @@
                 </svg>
                 <h1>Online QR Generator</h1>
             </div>
+            <div class="support-mini">
+                <a href="mailto:nhpntd7@gmail.com">📧 nhpntd7@gmail.com</a>
+                <span>•</span>
+                <a href="tel:0326514755">📞 0326 514 755</a>
+                <span>•</span>
+                <a href="https://www.facebook.com/nguyen.hoang.phuc.14087" target="_blank">
+                    👍 Facebook
+                </a>
+            </div>
         </header>
 
         <!-- Stepper -->
